1.x.x
------------------
NEW FEATURES:
- Added timesheet data entry inside tasks details box. (Alex Pagnoni)
- Added task timesheet totals inside tasks details box. (Alex Pagnoni)
 
CHANGES:
- Timesheet class is now an Innowork Item. (Alex Pagnoni)
- Changed minimum Innomatic version to 6.3.0. (Alex Pagnoni)
- Added checks to avoid logging hours in archived projects. (Alex Pagnoni)

FIXES:
- Fixed calendar sticky date in session bug. (Alex Pagnoni)



1.1.0 - 2014/01/07 
------------------
NEW FEATURES:
- Added dashboard widget with personal timesheet summary. (Alex Pagnoni)
- Added log work form. (Alex Pagnoni)
- Added user timesheet monthly calendar view. (Alex Pagnoni)



1.0.0 - 2014/01/06
------------------
- First release.